Updated login and registration pages

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,11 @@
 
 
     <title>Home</title>
-    <h1>Expenses</h1>
+
+    <div class="pt-5"><h1>Expenses</h1></div>
 
        
-    <div class="row justify-content-center">
+    <div class="row justify-content-center pt-5">
         <table class="w-50 table table-striped text-left">        
             <thead>
                 <tr>
