--- a/templates/index.html
+++ b/templates/index.html
@@ -13,65 +13,42 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type = "text/css" href="{{url_for('static', filename='main.css')}}">
     <div class = "container"> 
-        <header class="site-header">
-            <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-                <div class="container">
-                    <a class="navbar-brand mr-4" href="{{url_for('views.home')}}">Expense Tracker</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarToggle">
-                        <div class="navbar-nav mr-auto">
-                            <a class="nav-item nav-link" href="{{url_for('views.home')}}">Home</a>
-                            <a class="nav-item nav-link" href="{{url_for('views.about')}}">About</a>
-                        </div>
-                        <!-- Navbar Right Side -->
-                        <div class="navbar-nav">
-                            <a class="nav-item nav-link" href="{{url_for('views.login')}}">Login</a>
-                            <a class="nav-item nav-link" href="{{url_for('views.register')}}">Register</a>
-                        </div>
+    <header class="site-header">
+        <nav class="navbar navbar-expand-md fixed-top">
+            <div class="container">
+                <a class="navbar-brand mr-4" href="{{url_for('views.home')}}"><b>Expense Tracker</b></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggle">
+                    <div class="navbar-nav mr-auto">
+                        <a class="nav-item nav-link" href="{{url_for('views.home')}}">Home</a>
+                        <a class="nav-item nav-link" href="{{url_for('views.about')}}">About</a>
+                    </div>
+                    <!-- Navbar Right Side -->
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="{{url_for('views.login')}}">Login</a>
+                        <a class="nav-item nav-link" href="{{url_for('views.register')}}">Register</a>
                     </div>
                 </div>
-            </nav>
-        </header>
+            </div>
+        </nav>
+    </header>
     </div>
 
     
 </head>
 <body>  
 
-    
-
-    
-    {# <div class = "card text-center bg-light justify-content-center pt-1">
-        <div class = " cardbody justify-content-center"> 
-            {% block content %}
-            
-            {% endblock %}
-        
-        </div>        
-        
-    </div> #}
-
-
-    
-
-    {% with messages = get_flashed_messages(with_categories = true)%}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class = "alert alert-{{cagegory}} background"> {{message}} </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-
-    <div class = "container background">
+    <div class = "content-section">
         {% block content %}
-                
+                    
         {% endblock %}
+    
+        
 
     </div>
-    
-    
+   
     
 
 
@@ -92,10 +69,7 @@
 
 </body>
 
-<style>
-    body {
-    padding-top: 4rem;
-    }
+<style>  
 
     
 
