--- a/expense_tracker/templates/login-page-backup.html
+++ b/expense_tracker/templates/login-page-backup.html
@@ -2,42 +2,8 @@
 {% block content%}
 
 <!-- Section: Design Block -->
-<section class="background-radial-gradient overflow-hidden" style="padding-top: 5.5%;">
-  <style>
-    .background-radial-gradient {
-      background-color: hsl(218, 41%, 15%);
-      background-image: radial-gradient(650px circle at 0% 0%,
-          hsl(218, 41%, 35%) 15%,
-          hsl(218, 41%, 30%) 35%,
-          hsl(218, 41%, 20%) 75%,
-          hsl(218, 41%, 19%) 80%,
-          transparent 100%),
-        radial-gradient(1250px circle at 100% 100%,
-          hsl(218, 41%, 45%) 15%,
-          hsl(218, 41%, 30%) 35%,
-          hsl(218, 41%, 20%) 75%,
-          hsl(218, 41%, 19%) 80%,
-          transparent 100%);
-    }
-
-    #radius-shape-1 {
-      height: 220px;
-      width: 220px;
-      top: -60px;
-      left: -130px;
-      background: radial-gradient(#44006b, #ad1fff);
-      overflow: hidden;
-    }
-
-    #radius-shape-2 {
-      border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
-      bottom: -60px;
-      right: -110px;
-      width: 300px;
-      height: 300px;
-      background: radial-gradient(#44006b, #ad1fff);
-      overflow: hidden;
-    }
+<section style="padding-top: 10.5%;">
+  <style>   
 
     .bg-glass {
       background-color: hsla(0, 0%, 100%, 0.9) !important;
@@ -46,8 +12,8 @@
   </style>
 
 <div class="container px-4 py-5 px-md-5 text-center text-lg-start ym-5">
-    <div class="row gx-lg-5 align-items-center mb-5" style="align-items:center; justify-content:center">
-       
+    <div class="row gx-lg-5 align-items-center mb-5" style="align-items:center; justify-content:center">      
+
         <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
             <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
             <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
@@ -57,23 +23,8 @@
                     <form method = "POST" action = "">  
                         {{ form.hidden_tag() }}
                         <fieldset class="form-group">
-                            <legend class="border-bottom mb-2 text-center"><b> Create an Account</b></legend>
+                            <legend class="border-bottom mb-2 text-center"><b>Sign In</b></legend>
 
-                            <div class="form-outline mb-4">
-                                {# {{ form.username.label(class = "form-label")}} #}
-                                {% if form.username.errors %}
-                                    {{ form.username(class="form-control is-invalid") }}
-                                    <div class="invalid-feedback">
-                                        {% for error in form.username.errors %}
-                                        <span>{{ error }}</span>
-                                        {% endfor %}
-                                    </div>
-                                {% else %}
-                                    {{ form.username(class="form-control", placeholder="Username") }}
-                                {% endif %}
-                        
-                            </div>
-                        
                             <div class="form-outline mb-4">
                                 {# {{ form.email.label(class = "form-label")}} #}
                                 {% if form.email.errors %}
@@ -91,7 +42,7 @@
                         
                             <div class="form-outline mb-4">
                                 {# {{ form.password.label(class = "form-label")}} #}
-                                {% if form.password.errors %}
+                                {% if form.email.errors %}
                                     {{ form.password(class="form-control is-invalid") }}
                                     <div class="invalid-feedback">
                                         {% for error in form.password.errors %}
@@ -103,24 +54,12 @@
                                 {% endif %}
                         
                             </div>
-                        
-                            <div class="form-outline mb-4">
-                                {# {{ form.confirm_password.label(class = "form-label")}} #}
-                                {% if form.confirm_password.errors %}
-                                    {{ form.confirm_password(class="form-control is-invalid") }}
-                                    <div class="invalid-feedback">
-                                        {% for error in form.confirm_password.errors %}
-                                        <span>{{ error }}</span>
-                                        {% endfor %}
-                                    </div>
-                                {% else %}
-                                    {{ form.confirm_password(class="form-control", placeholder="Confirm Password") }}
-                                {% endif %}
-                        
+
+                            <div class="form-check" style="text-align: left;">
+                                {{form.remember(class = "form-check-input")}}
+                                {{form.remember.label(class = "form-check-label")}}
                             </div>
-                        
-                            
-                        
+
                         </fieldset> 
                         
                         <div class="form-group">
@@ -132,7 +71,10 @@
                                 </div>
                             </div>
                         </div>
-                        
+
+                        <small class="text-muted ml-2">
+                            <a href="#">Forgot password?</a>
+                        </small>
                         
 
                         <!-- Register buttons -->
@@ -141,7 +83,7 @@
                             
                         </div> #}
                         <div class = "border-top pt-3"> 
-                            <small class = "text-muted"> Already have an account? <a class = "ml-2" href="{{ url_for('views.login')}}" >Sign In</a> </small>
+                            <small class = "text-muted"> Don't have an account? <a class = "ml-2" href="{{ url_for('views.register')}}" >Sign Up</a> </small>
                         </div>
 
                         
@@ -155,4 +97,12 @@
 <!-- Section: Design Block -->
 
 
+
+
+
+
+
+
 {% endblock%}
+
+
