--- a/expense_tracker/static/main.css
+++ b/expense_tracker/static/main.css
@@ -23,7 +23,9 @@ h6 {
 
 .nav-bg {
   background-color: #23145ab0;
-  background-image: linear-gradient(to right , darkblue 50%, rgb(1, 1, 45));
+  /* background-image: linear-gradient(to right , darkblue 50%, rgb(1, 1, 45)); */
+  background:darkblue;
+  /* box-shadow: 0 0px 10px hsla(0, 0%, 18%, 0.834); */
 
   
 
@@ -54,32 +56,26 @@ h6 {
 }  
 
 .content-section {
-  /* background: rgb(25, 25, 25); */
-  /* padding: 10px 20px; */
-  /* border: 1px solid #dddddd; */
-  /* border: 10px solid red; */
-  border-radius: 30px;
-  /* margin-bottom: 20px; */
 
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
+  border-radius: 30px;
 
   height: 85vh;
   width: 100vw;
 
-  /* border: 3px solid red; */
+  
 }
 
-/* REGISTER PAGE -------------------------------------------------------------------------- */
+.main-svg {
+  border-radius: 5px;  
+
+
+}
+
+
+
 
 .form-section {
 
-  /* border: 5px dashed blue;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40%; */
 
   display: flex;
   justify-content: center;
@@ -99,18 +95,6 @@ h6 {
   vertical-align: middle;
 }
 
-/* .form-control {
-  font-size: 1.75vw;
-}
-
-.submit-button {
-  font-size: 1.4vw;
-}
-
-.text-muted {
-  font-size: 1vw;
-
-}  */
 
 .bg-glass {
   background-color: hsla(240, 24%, 93%, 0.744) !important;
@@ -125,7 +109,7 @@ h6 {
 
 }
 
-/* ------------------------------------------------------------------------------------- */
+
 
 .authentication-form {
   width: 450px;
@@ -138,8 +122,7 @@ h6 {
   box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
   
   padding: 2%;
-  /* background-image: linear-gradient(-225deg, #E3FDF5 50%, #FFE6FA 50%); */
-  /* background-image: repeating-radial-gradient(farthest-corner at 100px 100px, rgb(41, 41, 41)  30%, rgb(54, 54, 54) 60%); */
+
 
   background-color: hsla(240, 30%, 95%, 0.695) !important;
   backdrop-filter: saturate(200%) blur(25px);
@@ -160,29 +143,7 @@ fieldset {
   margin: 0;  
 
 }
-/* form Container
-form .con {
-  display: -webkit-flex;
-  display: flex;
 
-  -webkit-justify-content: space-around;
-  justify-content: space-around;
-
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-
-  margin: 0 auto;
-} */
-
-
-/* .form-outline {
-  background: rgb(84, 234, 9);
-  color: #333;
-  padding: 14.5px 0px 15px 9px;
-  border-radius: 5px 0px 0px 5px;
-} */
-
-/* inputs form  */
 
 label {
   margin: 0;
@@ -283,13 +244,6 @@ label {
 
   margin-top: 2%;
  
-
-  /* padding: 14.5px 0px 15px 9px; */
-
-  /* padding: 14.5px 0px 15px 9px; */
-  
-  /* border-radius: 5px 0px 0px 5px; */
-
   font-size: 16px;
   color: black;
 
